SearchService now working with dataBase using org.springframework.data.jpa.domain.Specification